# logos

./: .gitignore  CHANGELOG.md  README.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: quarto-publish.yml
docs/: design.md
docs-site/: _quarto.yml  index.qmd
docs-site/guide/: defining.qmd  expressions.qmd  propositions.qmd  theorems.qmd
docs-site/guide/examples/: data-structures.qmd  index.qmd  knights-knaves.qmd  number-theory.qmd
docs-site/guide/tactics/: arithmetic.qmd  combinators.qmd  custom.qmd  index.qmd  rewrite.qmd  structural.qmd
docs-site/reference/: api.qmd
guide/: defining.html  expressions.html  propositions.html  theorems.html
guide/examples/: data-structures.html  index.html  knights-knaves.html  number-theory.html
guide/tactics/: arithmetic.html  combinators.html  custom.html  index.html  rewrite.html  structural.html
logos/: __init__.py  builtins.py  define.py  expr.py  goal.py  helpers.py  kernel.py  registry.py  runner.py  theorem.py
logos/domains/: __init__.py  logic_puzzles.py
logos/tactics/: __init__.py  arithmetic.py  auto.py  combinators.py  rewrite.py  structural.py
reference/: api.html
site_libs/bootstrap/: bootstrap-814bcb4e0ebdb3c1af42547d9f864aab.min.css  bootstrap-dark-d74f66e129107f86a04b57e06ae00b05.min.css
tests/: conftest.py  test_define.py  test_expr.py  test_goal.py  test_helpers.py  test_integration.py  test_kernel.py  test_runner.py
tests/test_tactics/: test_arithmetic.py  test_combinators.py  test_rewrite.py  test_structural.py
(+1 files in other folders)
