[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logos-ai"
version = "0.1.0"
description = "A Lean-style proof kernel for Python"
requires-python = ">=3.12"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
